# lm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: text-pass.md
scripts/: print_text.py  process_texts.py  text_pass_schema.py  tokenizer.py
src/lm/: model.py  text_pass.py  typing.py
src/lm/layer/: attention.py  feed_forward.py  positional_encoding.py  rms_norm.py
tests/: test_text_pass.py
