[project]
name = "lm"
version = "0.1.0"
description = "Language Model from Scratch"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
dependencies = [
    "numpy>=2.4.6",
    "pydantic>=2.13.4",
    "regex>=2026.5.9",
    "tqdm>=4.68.2",
]

[build-system]
requires = ["uv_build>=0.11.20,<0.12"]
build-backend = "uv_build"

[project.optional-dependencies]
cpu = ["torch>=2.12.0"]
cu130 = ["torch>=2.12.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu130" }]]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu130", extra = "cu130" },
]
lm = { workspace = true, editable = true }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.workspace]
members = ["."]

[dependency-groups]
dev = [
    "ipykernel>=7.3.0",
    "lm",
    "pytest>=9.0.3",
    "ruff>=0.15.16",
]

[tool.ruff.lint]
extend-select = ["I"]
